
* WebHelpers now depends on MarkupSafe. ``literal`` and ``escape`` now use it.
  
* webhelpers.html.builder:

  - ``literal`` and ``escape`` now use MarkupSafe, which has a C speedup for
    escaping, escapes single-quotes for security, and adds new methods to
    ``literal``. Compatibility should not be a problem; but see the docs if
    you encounter any edge cases.

* webhelpers.html.tags:

  - Don't put an "id" attribute on a hidden fields generated by the ``form()``
    helper, including the magic ``_method`` field. The IDs will clash if there
    are multiple forms on the page.

1.1 (2010-08-09)
----------------

* webhelpers.paginate:

  - Remove stray Routes import. (Other conditional Routes imports remain for
    backward compatibility; see module docstring.)

* webhelpers.pylonslib.minify:

  - Remove _jsmin module due to licensing issues. Details are in
    webhelpers/pylonslib/_jsmin.py .  You can install the "jsmin" package in
    PyPI (which has the same license), and the helper will use it. If that
    package is installed, the helper will use it.  Otherwise the helper will
    emit a warning and leave the Javascript unchanged. CSS minification is not
    affected.


1.0 (2010-06-01)
-----------------

* webhelpers.html.tools:

 - Bugfix re URLs surrounded by [].  Bug #32.

1.0rc1 (2010-05-24)
-------------------

* webhelpers.html.tags:

 - Change 'id' argument to all form field helpers. The default value is now
   NotGiven rather than None. NotGiven tells WebHelpers to create an ID
   attribute based on the field name (formerly None did this). None suppresses
   the ID attribute entirely (formerly "" did this, and still does for backward
   compatibility).  This behavior of None is consistent with other parts of
   WebHelpers.

* webhelpers.misc:

 - New ``format_exception`` helper to display an exception as Python would but
   without the traceback.

1.0b7 (2010-05-16)
------------------

* webhelpers.containers:
