@@ -20,6 +20,9 @@ close a potential XSS attack route), and adds new methods to ``literal``.
 *Note*: ``escape_silent`` does not exist yet in MarkupSafe 0.9.3, but
 WebHelpers has a fallback. 
 
+*webhelpers.html.tags:* The ``text()`` helper has a "type" argument for new
+HTML 5 input types.
+
 *webhelpers.html.tags:* **Don't add an "id" attribute to hidden fields
 generated by the ``form()`` helper**: the IDs clash if there are multiple forms
 on the page. To create a hidden field with an ID, call ``hidden()`` directly.
